Update functional spec and system spec

--- a/docs/1. Rendszerterv dokumentáció.MD
+++ b/docs/1. Rendszerterv dokumentáció.MD
@@ -1,25 +1,29 @@
-# Rendszerterv (megvalósított rendszerhez igazítva)
+# Rendszerterv
 
 ## 1. A rendszer célja
 
-A projekt célja egy modern, felhasználóbarát receptmegosztó webalkalmazás létrehozása. A rendszer frontend–backend szétválasztott architektúrában működik: a backend egy Java Spring Boot alapú REST szolgáltatás, amelyet egy külön Blazor WebAssembly kliens használ.
+A projekt célja egy modern, felhasználóbarát receptmegosztó webalkalmazás létrehozása. A rendszer frontend–backend szétválasztott architektúrában működik:
 
-A jelenlegi megvalósított verzió backend oldalon az alábbi fő funkciókat biztosítja:
+- **Backend:** Java Spring Boot alapú REST szolgáltatás
+- **Frontend:** Blazor WebAssembly kliens (MudBlazor komponensekkel)
+
+A jelenleg megvalósított verzió (V1.0) backend oldalon az alábbi fő funkciókat biztosítja:
 
 - receptek létrehozása, listázása, kategória szerinti szűrése, azonosító szerinti lekérése és törlése,
 - kategóriák listázása,
 - alapanyagok (material) listázása,
-- felhasználók regisztrációja és az aktuális bejelentkezett felhasználó adatainak lekérése.
+- felhasználók regisztrációja,
+- aktuális bejelentkezett felhasználó adatainak lekérése.
 
-A backend DTO alapú adatcserét használ, MapStruct mapperrel, és OpenAPI/Swagger dokumentációval rendelkezik. Az adattárolás MySQL relációs adatbázisban történik.
+A backend DTO-alapú adatcserét használ (MapStruct mapper), és OpenAPI/Swagger dokumentációval rendelkezik. Az adattárolás MySQL relációs adatbázisban történik.
 
-Nem megvalósított funkciók ebben a verzióban:
+Nem megvalósított funkciók ebben a verzióban (az eredeti tervekhez képest):
 
 - kommentelés és csillagos értékelés,
-- kedvencek kezelése,
-- recept módosítása (PUT/PATCH),
+- kedvencek (favorites) kezelése,
+- recept módosítása külön PUT/PATCH végponttal (update a POST /recipe-en keresztül történik),
 - kategória és alapanyag adminisztráció (csak listázás érhető el),
-- külső tápérték-számító API integráció.
+- külső tápérték-számító API integráció (a tápértékek az alapanyag táblából származnak).
 
 ## 2. Projektterv
 
@@ -27,158 +31,229 @@ Nem megvalósított funkciók ebben a verzióban:
 
 A projekt agilis módszertan szerint, egy szorosan együttműködő csapatban valósul meg. A projekt előrehaladását és a feladatok kiosztását egy Kanban tábla segítségével követjük.
 
-**Projektkoordinátor és Kanban menedzsment:** Csajbók-Reményi Korinna
-- Feladata a csapatmunkát segítő Kanban tábla karbantartása, a feladatok állapotának nyomon követése, és a csapattagok közötti kommunikáció elősegítése.
+**Projektkoordinátor és Kanban menedzsment: Csajbók-Reményi Korinna**
+- Kanban tábla karbantartása
+- feladatok állapotának nyomon követése
+- csapattagok közötti kommunikáció támogatása
 
-**Fejlesztői csapat:**
+**Fejlesztői csapat tagjai:**
+- Csajbók-Reményi Korinna
 - Pataricza György
 - Deák Dániel
 - Benkő Bence
 - Németh Dávid
-- Csajbók-Reményi Korinna
 
 A csapat tagjai közösen felelősek a termékért, a prioritások meghatározásáért és a felmerülő akadályok elhárításáért.
 
 ### 2.2 Projektmunkások és felelősségeik
 
-**Frontend:**
-- **Deák Dániel:** A Blazor alapú projektváz kialakítása, a felhasználói felület komponenseinek implementálása.
-- **Benkő Bence:** A felhasználói felület és felhasználói élmény megtervezése Figma szoftverrel.
+**Backend**
+- **Pataricza György**
+    - Spring Boot projektváz létrehozása
+    - REST API végpontok fejlesztése (receptek, kategóriák, alapanyagok, felhasználók)
+    - Spring Security integráció (form login, jogosultságkezelés)
+    - BDD (Cucumber) tesztek megírása
+- **Németh Dávid**
+    - Backend unit és MockMvc alapú controller tesztek írása
+    - tesztlefedettség növelése
+    - dokumentációk (funkcionális specifikáció, rendszerterv) aktualizálása a megvalósított rendszerhez
 
-**Backend:**
-- **Pataricza György:** A Java Spring Boot projekt vázának létrehozása, az üzleti logikát megvalósító REST API végpontok fejlesztése, a Spring Security keretrendszer integrálása a felhasználói hitelesítéshez.
-- **Németh Dávid:** Mock tesztek készítése.
+**Frontend**
+- **Deák Dániel**
+    - Blazor projektváz kialakítása
+    - fő komponensek implementálása (Home, Recipe, Profil, Account, AddRecipe dialógus, CategoryFilter)
+    - backend API-k integrálása
+- **Benkő Bence**
+    - UI/UX tervezés Figma-ban
+    - DDT tesztesetek készítése a frontendre
+    - felhasználói élmény finomhangolása
+- **Csajbók-Reményi Korinna**
+    - DDT tesztek tervezése és futtatása
+    - kézi, exploratív tesztelés támogatása
 
-**Adatbázis és Infrastruktúra:**
-- **Benkő Bence:** Az adatbázis séma lekódolása MySQL adatbázishoz, a GitHub repository létrehozása és karbantartása.
+**Adatbázis és infrastruktúra**
+- **Benkő Bence**
+    - adatbázis séma megtervezése és lekódolása MySQL-re
+    - GitHub repository létrehozása és karbantartása
 
-**Dokumentáció és Tesztelés:**
-- **Németh Dávid:** A funkcionális specifikáció és a rendszerterv elkészítése és karbantartása, valamint unit tesztek készítése.
-- **Pataricza György:** A backend logikához tartozó BDD tesztek megírása.
-- **A teljes csapat:** Integrációs és manuális tesztelés a fejlesztési ciklusok során a hibák felderítése érdekében.
+**Dokumentáció és tesztelés (összefoglaló)**
+- Dokumentáció (funkcionális specifikáció, rendszerterv): Németh Dávid
+- BDD tesztek: Pataricza György
+- Frontend DDT tesztek: Benkő Bence, Csajbók-Reményi Korinna
+- Rendszer- és integrációs tesztek: Deák Dániel
+- Explorációs manuális tesztelés: teljes csapat
 
 ### 2.3 Ütemterv
 
+Az eredeti terv funkcióalapú bontása:
+
 | Funkció / Story | Feladat / Task | Prioritás | Becslés (óra) |
-|---|---|---|---|
+| :--- | :--- | :--- | :--- |
 | Funkcionális specifikáció | Elkészítés | 1 | 8 |
 | Rendszerterv | Elkészítés | 1 | 8 |
-| Infrastruktúra | GitHub repository és Kanban board létrehozása | 1 | 3 |
-| Tervezés | UI/UX tervek elkészítése (Figma) | 1 | 12 |
-| Adattárolás | Adatmodell megtervezése és séma lekódolása (MySQL) | 2 | 8 |
-| Backend | Spring Boot projekt váz létrehozása | 2 | 4 |
-| Backend | Felhasználói regisztráció és login (Spring Security) | 2 | 12 |
-| Frontend | Blazor projekt váz létrehozása | 2 | 4 |
+| Infrastruktúra | GitHub repo és Kanban board | 1 | 3 |
+| Tervezés | UI/UX tervek (Figma) | 1 | 12 |
+| Adattárolás | Adatmodell + MySQL séma | 2 | 8 |
+| Backend | Spring Boot projektváz | 2 | 4 |
+| Backend | Felhasználói regisztráció és login | 2 | 12 |
+| Frontend | Blazor projektváz | 2 | 4 |
 | Frontend | Főoldal, regisztrációs és bejelentkezési felület | 2 | 10 |
 | Backend | Recept API-k (létrehozás, olvasás, törlés) | 3 | 10 |
-| Frontend | Recept-lista és recept-részletező oldal | 3 | 12 |
+| Frontend | Receptlista és recept-részletező oldal | 3 | 12 |
 | Backend | Komment, értékelés, kedvencek API-k | 3 | 12 |
-| Frontend | Receptfeltöltő űrlap és közösségi funkciók | 3 | 14 |
-| Backend | Külső kalória API integrálása | 4 | 8 |
+| Frontend | Közösségi funkciók UI | 3 | 14 |
+| Backend | Külső kalória API integráció | 4 | 8 |
 | Tesztelés | Backend unit és integrációs tesztek | 3 | 16 |
 | Tesztelés | Manuális E2E tesztelés | 4 | 12 |
 
+*Megjegyzés: a komment/értékelés/kedvencek és külső tápérték API funkciók az eredeti ütemtervben szerepelnek, de a V1.0 implementációban nem készültek el.*
+
 ### 2.4 Mérföldkövek
 
-1. A Figma prototípus bemutatása.
-2. Az alapvető backend API működőképessége (felhasználókezelés, recept API-k).
-3. Az első, bejelentkezés nélküli felhasználók számára is használható verzió átadása (receptek böngészése).
-4. A teljes funkcionalitású szoftver átadása.
+1. Figma prototípus elkészülése.
+2. Alap backend API működőképessége (felhasználókezelés, recept API-k).
+3. Első, bejelentkezés nélkül is használható verzió (receptek böngészése).
+4. A V1.0 stabil, integrált kliens–szerver rendszer átadása.
 
 ## 3. Üzleti folyamatok modellje
 
 ### 3.1 Üzleti szereplők
 
-- **Látogató:** A rendszert regisztrálás nélkül is lehet használni. Ekkor a látogató csak a nyilvános tartalmakat éri el, elsősorban receptek és törzsadatok lekérésére jogosult.
-- **Regisztrált felhasználó:** A rendszer azon funkcióit éri el, amelyek autentikációhoz kötöttek, különösen recept feltöltése és törlése.
+- **Látogató (Guest):**
+    - regisztráció nélkül böngészheti a recepteket,
+    - megtekintheti a kategóriákat és alapanyagokat (közvetetten, a frontend hívásain keresztül).
+- **Regisztrált felhasználó (User):**
+    - minden látogatói jogkörrel rendelkezik,
+    - belépés után recepteket hozhat létre, törölhet,
+    - saját profiljához kötött recepteket kezelhet.
 
 ### 3.2 Üzleti folyamatok
 
-#### Bejelentkezés minden regisztrált felhasználó számára ugyanolyan lefutású:
+**Bejelentkezés**
+- A felhasználó a frontend menüből a bejelentkezés opciót választja.
+- A Blazor kliens a Spring Security `GET /login` oldalára irányítja.
+- A felhasználó megadja felhasználónevét és jelszavát.
+- Sikeres autentikáció esetén a backend `JSESSIONID` sütit állít be, amely alapján azonosítja a további kérések során.
 
-A kliensoldali bejelentkezési felületen a felhasználó megadja a felhasználónevét és jelszavát. Sikeres autentikáció esetén a backend Spring Security principal alapján azonosítja a felhasználót, és elérhetővé teszi a jogosultsághoz kötött API-kat.
+**Regisztráció**
+- A látogató egy regisztrációs űrlapon megadja adatait (felhasználónév, e-mail, jelszó stb.).
+- A kliens `POST /user/register` kérésben elküldi a regisztrációs adatokat.
+- A backend ellenőrzi az adatok érvényességét, valamint a felhasználónév egyediségét.
+- Siker esetén új `RecipeUser` rekord jön létre, a jelszó titkosítva tárolódik.
+- Foglalt felhasználónév vagy hibás adatok esetén hibaüzenet kerül visszaküldésre.
 
-#### Üzleti folyamatok regisztrált felhasználók számára:
+**Új recept feltöltése**
+- *Előfeltétel:* regisztrált, bejelentkezett felhasználó.
+- A felhasználó az „Add recipe” akcióval megnyitja a receptfeltöltő űrlapot.
+- A kliens előzetesen betölti:
+    - kategóriák listáját (`GET /category`),
+    - alapanyagok listáját (`GET /material`).
+- A felhasználó megadja:
+    - recept nevét,
+    - kategóriát,
+    - előkészítési/főzési időket,
+    - adagok számát,
+    - leírást,
+    - hozzávalókat (alapanyag + mennyiség),
+    - elkészítési lépéseket.
+- Mentéskor a kliens `POST /recipe` kérést küld `RecipeDto`-val.
+- A backend létrehozza a receptet, a hozzávalókat, és a bejelentkezett felhasználóhoz rendeli.
 
-**Új recept feltöltése:**
-A felhasználó a recept feltöltő űrlapon megadja a recept adatait. Mentéskor a kliens `POST /recipe` kérést küld, a backend a receptet a bejelentkezett felhasználóhoz rendeli és elmenti.
+**Recept törlése**
+- *Előfeltétel:* regisztrált, bejelentkezett felhasználó.
+- A felhasználó kiválasztja a törölni kívánt saját receptet.
+- A kliens a felhasználó megerősítése után `DELETE /recipe/{id}` kérésben küldi el a törlési igényt.
+- A backend ellenőrzi a jogosultságot (tulajdonos-e), majd törli a receptet és a kapcsolódó hozzávalókat (ON DELETE CASCADE).
 
-| Megnevezés |
-|---|
-| Név |
-| Kép (opcionális hivatkozás) |
-| Kategória |
-| Hozzávalók listája (alapanyag, mennyiség) |
-| Elkészítés leírása / lépések |
+**Receptek böngészése**
+- Látogató vagy regisztrált felhasználó a Home oldalon recepteket böngészhet.
+- A kliens `GET /recipe` hívással betölti az összes receptet, majd kártyás nézetben jeleníti meg.
 
-**Recept törlése:**
-A felhasználó a saját receptjét törölheti a `DELETE /recipe/{id}` végponton keresztül. A backend azonosító alapján törli a receptet és a kapcsolt ingredienteket.
-
-#### Üzleti folyamatok látogatók számára:
-
-**Regisztráció:**
-A látogató `POST /user/register` kéréssel regisztrál. Foglalt felhasználónév esetén a backend hibaüzenetet ad vissza, siker esetén a felhasználó mentésre kerül.
-
-**Keresés:**
-A szöveges keresés a megvalósított backendben nem érhető el.
+**Keresés és szűrés**
+- A név szerinti keresés a frontenden kliensoldali szűrés a már lekért receptlistán (backend oldali kereső végpont nincs).
+- A kategória szerinti szűrés `GET /recipe/bycategory?categoryId=...` hívással történik.
 
 ### 3.3 Üzleti entitások
 
-- Recept
-- Felhasználó (User)
-- Kategória
-- Alapanyag
-- Hozzávaló
+- **Recept (Recipe)** – központi entitás, a felhasználóhoz és kategóriához kapcsolódik.
+- **Felhasználó (RecipeUser)** – regisztrált user, aki recepteket ír.
+- **Kategória (Category)** – recept kategorizálása (pl. Leves, Főétel, Desszert).
+- **Alapanyag (Material)** – törzsadat, tápérték-információkkal.
+- **Hozzávaló (Ingredient)** – kapcsoló entitás egy recept és egy alapanyag között, mennyiségi adattal.
 
-Komment és Kedvencek entitások nem részei a megvalósított verziónak.
+*Komment és Kedvencek entitások nem részei a megvalósított verziónak.*
 
 ## 4. Követelmények
 
 ### 4.1 Funkcionális követelmények
 
 **Felhasználókra vonatkozó követelmények:**
-A látogatók regisztráció nélkül böngészhetik a recepteket, kategóriákat és alapanyagokat. Regisztráció és bejelentkezés után recepteket tölthetnek fel és törölhetnek. Az aktuális felhasználó saját adatait le tudja kérdezni.
+
+- **Látogatók regisztráció nélkül:**
+    - receptek böngészése és részleteinek megtekintése,
+    - kategóriák és alapanyagok adatainak lekérése (frontend felületén keresztül).
+- **Regisztrált felhasználók:**
+    - minden, amit a látogatók,
+    - receptek feltöltése,
+    - saját receptek törlése,
+    - aktuális felhasználói adatok lekérése.
 
 **Rendszerre vonatkozó követelmények:**
-A rendszer REST API-n biztosítja a receptek és törzsadatok kezelését. A receptekhez képet (hivatkozásként), hozzávalókat, kategóriát és elkészítési leírást tud tárolni. Külső tápérték-API integráció nem része a jelenlegi verziónak.
+
+- A rendszer REST API-n keresztül teszi elérhetővé:
+    - a receptek CRUD műveleteit (a módosítás jelenleg a `POST /recipe`-en keresztül történik),
+    - a kategória- és alapanyag-törzsadatokat,
+    - a felhasználók regisztrációját és az aktuális user lekérdezését.
+- A receptekhez képet (URL), hozzávalókat, kategóriát és elkészítési leírást tud tárolni.
+- Külső tápérték-API integráció nem része a jelenlegi verziónak.
 
 ### 4.2 Nemfunkcionális követelmények
 
-#### Termék követelmények
+**Termék követelmények**
 
-**Használhatósági követelmények:** A backend szabványos REST API-kat biztosít, így bármely modern kliens könnyen integrálhatja.
+- **Használhatóság:**
+    - A backend szabványos, JSON-alapú REST API-kat biztosít.
+    - A frontend reszponzív, modern webes felületet nyújt (Blazor + MudBlazor).
+- **Megbízhatóság:**
+    - Tranzakciókezelés Spring Data JPA rétegen keresztül, MySQL adatbázissal.
+    - Üzleti logikát és perzisztenciát lefedő unit és integrációs tesztek.
+- **Hatékonyság:**
+    - A tipikus felhasználói műveletek (lista, részletek lekérése, mentés, törlés) alacsony válaszidővel futnak.
+- **Hordozhatóság:**
+    - Java alapú backend, amely bármely modern szerverkörnyezetben futtatható (JDK 21).
+    - Blazor WebAssembly kliens, amely bármely modern böngészőben fut.
 
-**Megbízhatósági követelmények:** A tranzakciókezelés Spring Boot és Spring Data JPA rétegen keresztül történik, MySQL adatbázissal.
+**Szervezeti követelmények**
 
-**Hatékonysági követelmények:** Az API válaszideje tipikus terhelés mellett alacsony késleltetésű.
+- **Implementációs követelmények:**
+    - Nyílt forráskódú technológiák (Java 21, Spring Boot 3, Blazor, MySQL).
 
-**Hordozhatósági követelmények:** A backend Java alapú, bármely modern szerverkörnyezetben futtatható.
+**Külső követelmények**
 
-#### Szervezeti követelmények
-
-**Implementációs követelmények:** Nyílt forráskódú technológiák használata (Java 21, Spring Boot 3, Blazor, MySQL).
-
-#### Külső követelmények
-
-**Titokvédelmi követelmények (GDPR):** A felhasználói adatok biztonságosan tároltak, a jelszavak hash-elve kerülnek mentésre.
-
-**Biztonsági követelmények:** A hitelesítést Spring Security kezeli, BCrypt jelszóhash-eléssel. A publikus végpontok elérése whitelistben engedélyezhető.
+- **Biztonság:**
+    - Jelszavak hash-elve tárolódnak (BCrypt).
+    - A hitelesítést Spring Security kezeli.
+    - A publikus végpontok listája konfigurációval szabályozott.
 
 ### 4.3 Törvényi előírások, szabványok
 
-- ISO / IEC 27001 – Információbiztonsági irányítási rendszerek
-- ISO / IEC 12207 – Szoftver életciklus-folyamatok
+- OpenAPI 3.0 a REST API dokumentálására.
+- Általános adatvédelmi (GDPR) elvek betartása a felhasználói adatok kezelésénél.
 
 ## 5. Funkcionális terv
 
 ### 5.1 Rendszerszereplők
 
-- **Látogató:** Böngészheti a recepteket és törzsadatokat, regisztrálhat.
-- **Regisztrált felhasználó:** Receptek feltöltése és törlése, aktuális felhasználó lekérése.
+- **Látogató:**
+    - Recepteket, kategóriákat, alapanyagokat tekinthet meg.
+    - Regisztrálhat a rendszerbe.
+- **Regisztrált felhasználó:**
+    - Receptek feltöltése és törlése.
+    - Saját adatok lekérése (aktuális felhasználói profil).
 
 ### 5.2 Rendszerhasználati esetek és lefutásaik
 
-A diagramok a tervezett folyamatokat mutatják. A megvalósított verzióban a regisztráció, recept feltöltés és recept törlés folyamatok támogatottak. Recept módosítás, kommentelés és értékelés a jelenlegi verzióban nem támogatott.
+A diagramok a tervezett folyamatokat mutatják. A megvalósított verzióban regisztráció, recept feltöltés és recept törlés folyamatok támogatottak. Recept módosítás külön végponttal, kommentelés és értékelés a jelenlegi verzióban nem támogatott (a diagramokban tervezett funkcióként szerepelnek).
 
 ```mermaid
 flowchart LR
@@ -187,21 +262,21 @@ flowchart LR
     classDef decision fill:#DAA520,stroke:#FFD700,color:#000,font-weight:bold;
     classDef error fill:#B22222,stroke:#FF7F7F,color:#fff;
 
-    subgraph "Keresés folyamat (nem megvalósított)"
+    subgraph "Keresés folyamat"
         direction LR
         A((Start)):::startstop --> B["Keresési feltételek megadása"]:::action
         B --> C["Keresés az adatbázisban"]:::action
         C --> D["Eredmények megjelenítése"]:::action
         D --> E((Stop)):::startstop
     end
-```
+```    
 
-```mermaid
+```mermaid 
 flowchart LR
-    classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
-    classDef action fill:#2E8B57,stroke:#98FB98,color:#fff;
-    classDef decision fill:#DAA520,stroke:#FFD700,color:#000,font-weight:bold;
-    classDef error fill:#B22222,stroke:#FF7F7F,color:#fff;
+classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
+classDef action fill:#2E8B57,stroke:#98FB98,color:#fff;
+classDef decision fill:#DAA520,stroke:#FFD700,color:#000,font-weight:bold;
+classDef error fill:#B22222,stroke:#FF7F7F,color:#fff;
 
     subgraph "Regisztrációs folyamat"
         direction LR
@@ -209,31 +284,31 @@ flowchart LR
         B --> C["Űrlap kitöltése"]:::action
         C --> D{"Adatok érvényesek?"}:::decision
         D -->|Nem| C:::error
-        D -->|Igen| E["Felhasználó mentése"]:::action
+        D -->|Igen| E["Felhasználó mentése (POST /user/register)"]:::action
         E --> F((Stop)):::startstop
     end
-```
+``` 
 
-```mermaid
+```mermaid 
 flowchart LR
     classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
     classDef action fill:#2E8B57,stroke:#98FB98,color:#fff;
     classDef decision fill:#DAA520,stroke:#FFD700,color:#000,font-weight:bold;
     classDef error fill:#B22222,stroke:#FF7F7F,color:#fff;
 
-    subgraph "Felhasználói adatok módosítása folyamat (nem megvalósított)"
+    subgraph "Felhasználói adatok módosítása (nem megvalósított)"
         direction LR
         A((Start)):::startstop --> B["Bejelentkezés"]:::action
         B --> C["Profil adatok megjelenítése"]:::action
         C --> D["Módosítási űrlap kitöltése"]:::action
         D --> E{"Adatok érvényesek?"}:::decision
         E -->|Nem| D:::error
-        E -->|Igen| F["Módosítás"]:::action
+        E -->|Igen| F["Módosítás mentése"]:::action
         F --> G((Stop)):::startstop
     end
-```
+``` 
 
-```mermaid
+```mermaid 
 flowchart LR
     classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
     classDef action fill:#2E8B57,stroke:#98FB98,color:#fff;
@@ -247,12 +322,12 @@ flowchart LR
         C --> D["Adatok kitöltése"]:::action
         D --> E{"Adatok érvényesek?"}:::decision
         E -->|Nem| D:::error
-        E -->|Igen| F["Recept mentése"]:::action
+        E -->|Igen| F["Recept mentése (POST /recipe)"]:::action
         F --> H((Stop)):::startstop
     end
-```
+``` 
 
-```mermaid
+```mermaid 
 flowchart LR
     classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
     classDef action fill:#2E8B57,stroke:#98FB98,color:#fff;
@@ -261,12 +336,12 @@ flowchart LR
         direction LR
         A((Start)):::startstop --> B["Bejelentkezés"]:::action
         B --> C["Recept kiválasztása törlésre"]:::action
-        C --> D["Recept törlése"]:::action
+        C --> D["Recept törlése (DELETE /recipe/{id})"]:::action
         D --> E((Stop)):::startstop
     end
-```
+``` 
 
-```mermaid
+```mermaid 
 flowchart LR
     classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
     classDef action fill:#C71585,stroke:#FFB6C1,color:#fff;
@@ -284,9 +359,9 @@ flowchart LR
         F --> G["Komment megjelenítése"]:::action
         G --> H((Stop)):::startstop
     end
-```
+``` 
 
-```mermaid
+```mermaid 
 flowchart LR
     classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
     classDef action fill:#C71585,stroke:#FFB6C1,color:#fff;
@@ -306,7 +381,7 @@ flowchart LR
         I --> J((Stop)):::startstop
         F --> H
     end
-```
+``` 
 
 ### 5.3 Határ osztályok
 
@@ -314,89 +389,225 @@ A backend határfelülete a REST API végpontok halmaza:
 
 - `/user/register` – regisztráció
 - `/user` – aktuális felhasználó lekérdezése
-- `/recipe` – recept létrehozás és listázás
+- `/recipe` – recept létrehozás és listázás (POST + GET)
 - `/recipe/{id}` – recept lekérdezés és törlés
 - `/recipe/bycategory` – kategória szerinti szűrés
-- `/category` – kategória listázás
-- `/material` – alapanyag listázás
+- `/category` – kategóriák listázása
+- `/material` – alapanyagok listázása
+
+---
 
 ### 5.4 Menühierarchiák
 
-A menürendszer a frontend kliens felelőssége. A backend nem tartalmaz menühierarchiát.
+**Bejelentkezés előtt:**
+
+- Home
+- Categories
+- Register
+- Login
+
+**Bejelentkezett felhasználóként:**
+
+- Home
+- Categories
+- Add recipe
+- Profil (legördülő menü)
+    - Profile
+    - Logout
+
+---
 
 ### 5.5 Képernyőtervek
 
-A képernyőtervek Figma szoftverrel készültek. A frontend a backend API-khoz illeszkedik.
+A képernyőtervek Figma szoftverrel készültek.  
+A frontend a backend API-khoz illeszkedik, a tényleges implementáció Blazor + MudBlazor komponensekre épül.
+
+- **Home:** kártyás receptlista, keresősáv, kategóriaszűrő
+- **Recipe details:** kép, leírás, hozzávalók, elkészítési mód
+- **Profil:** felhasználói adatok és „My recipes” lista
+
+---
 
 ## 6. Fizikai környezet
 
 ### 6.1 Vásárolt softwarekomponensek és külső rendszerek
 
-A projekt nyílt forráskódú technológiákra épül. Külső kalória és tápérték API integráció a jelenlegi verzióban nem készült el.
+A projekt nyílt forráskódú technológiákra épül:
+
+- Java 21 + Spring Boot 3
+- Blazor WebAssembly
+- MySQL Community Server
+
+Külső kalória- és tápérték-API integráció a jelenlegi verzióban **nem készült el**.
+
+---
 
 ### 6.2 Hardver és hálózati topológia
 
-Az alkalmazás egy standard kliens-szerver webes architektúrára épül.
+Az alkalmazás standard kliens–szerver webes architektúrára épül:
 
-- A felhasználók böngészővel érik el a Blazor WebAssembly klienst.
-- A kliens HTTP kéréseket küld a Spring Boot backend számára.
-- A backend MySQL adatbázishoz csatlakozik.
+- **Kliens:** böngésző, amely a Blazor WebAssembly klienst futtatja
+- **Szerver:** Spring Boot REST API-t futtató szerver
+- **Adatbázis:** MySQL szerver, amelyhez a backend csatlakozik
+
+---
 
 ### 6.3 Fizikai alrendszerek
 
-- **Webszerver:** A Spring Boot alkalmazásba beágyazott webszerver.
-- **Adatbázis szerver:** MySQL.
-- **Kliens:** Blazor WebAssembly alkalmazás böngészőben futtatva.
+- **Webszerver:** a Spring Boot alkalmazásba beágyazott szerver (pl. Tomcat)
+- **Adatbázis szerver:** MySQL
+- **Kliens:** Blazor WebAssembly alkalmazás böngészőben
+
+---
 
 ### 6.4 Fejlesztő eszközök
 
-- **Backend IDE:** IntelliJ IDEA
-- **Frontend IDE:** Visual Studio, JetBrains Rider, VS Code
-- **Verziókezelés:** Git, GitHub
-- **Tervezés:** Figma
-- **Projektmenedzsment:** Kanban tábla
-- **Adatbázis-kezelő:** DBeaver, MySQL Workbench
+- Backend IDE: IntelliJ IDEA
+- Frontend IDE: Visual Studio, JetBrains Rider, VS Code
+- Verziókezelés: Git, GitHub
+- Tervezőeszköz: Figma
+- Projektmenedzsment: Kanban tábla
+- Adatbázis-kezelő: DBeaver, MySQL Workbench
+
+---
 
 ## 8. Architekturális terv
 
 ### 8.1 Architekturális tervezési minta
 
-Az alkalmazás szétválasztott architektúrát követ. A frontend és a backend két különálló alkalmazás, amelyek REST API-n keresztül kommunikálnak JSON formátumban. A backend réteges architektúrát valósít meg (Controller–Service–Repository).
+Az alkalmazás **szétválasztott architektúrát** követ.  
+A frontend és backend két különálló alkalmazás, amelyek REST API-n keresztül, JSON formátumban kommunikálnak.  
+A backend réteges architektúrát valósít meg (Controller–Service–Repository).
+
+---
 
 ### 8.2 Az alkalmazás rétegei, fő komponensei, ezek kapcsolatai
 
-```
-Kliens (Felhasználói felület) <-----> Spring Boot REST API <-----> MySQL adatbázis
-```
+Kliens (Blazor WebAssembly) <---- HTTP/JSON ----> Spring Boot REST API <----> MySQL adatbázis
 
-- **Kliens (Blazor):** Felhasználói felület, API hívások.
-- **Webszerver (Spring Boot):** REST végpontok, üzleti logika, autentikáció, DTO mapping.
-- **Adatbázis (MySQL):** Tartós adattárolás.
+
+**Kliens (Blazor):**
+
+- Oldalak: Home, Recipe, Profil, Account
+- Komponensek: NavMenu, AccountNavMenu, CategoryFilter, AddRecipeDialog, stb.
+- Feladata: felhasználói interakciók kezelése, REST API hívások végrehajtása
+
+**Webszerver (Spring Boot):**
+
+- Controller réteg – REST végpontok (RecipeController, CategoryController, MaterialController, UserController)
+- Service réteg – üzleti logika (RecipeService, CategoryService, MaterialService, MyUserDetailService)
+- Repository réteg – Spring Data JPA repository-k (RecipeRepository, CategoryRepository, MaterialRepository, UserDetailsRepository)
+- DTO mapping (MapStruct)
+
+**Adatbázis (MySQL):**
+
+- Relációs táblák: RecipeUser, Recipe, Category, Material, Ingredient
+- Idegen kulcsok és kapcsolatok kezelése
+
+---
 
 ### 8.3 Változások kezelése
 
-Minden üzleti logikát és adatkezelést érintő változás szerver oldalon történik. A kliens oldalon csak felület- és integrációs változtatások szükségesek.
+- Az üzleti logikát érintő változások elsődlegesen a backend **Service** rétegében történnek.
+- A perzisztenciaréteg (JPA entitások, repository-k) módosításával az adatmodell bővíthető (pl. komment, értékelés, kedvencek).
+- A frontend a publikált OpenAPI definíció alapján módosítható; az API szerződés változása esetén elegendő a kliens által hívott végpontokat és DTO-kat szinkronban tartani.
+
+---
 
 ## 9. Adatbázisterv
 
+### 9.1 Egyedek (entitások)
+
 **User (RecipeUser) egyedet jellemzi:**
-- id, name, userName, passwordEncoded, email, profileImageRef
+
+- id
+- name
+- userName
+- passwordEncoded
+- email
+- profileImageRef
 
 **Recept (Recipe) egyedet jellemzi:**
-- id, user_id (külső kulcs), category_id (külső kulcs), name, imageRef, prepTime, cookTime, portion, description, instructions
 
-**Hozzávalók (Ingredient) egyedet jellemzi:**
-- id, recipe_id (külső kulcs), material_id (külső kulcs), amount
+- id
+- user_id (külső kulcs RecipeUser-re)
+- category_id (külső kulcs Category-ra)
+- name
+- imageRef
+- prepTime
+- cookTime
+- portion
+- description
+- instructions (szöveges elkészítési leírás)
+
+**Hozzávaló (Ingredient) egyedet jellemzi:**
+
+- id
+- recipe_id (FK Recipe)
+- material_id (FK Material)
+- amount (mennyiség)
 
 **Alapanyag (Material) egyedet jellemzi:**
-- id, name, calories, protein, carbohydrate, fat, unitOfMeasure
+
+- id
+- name
+- calories
+- protein
+- carbohydrate
+- fat
+- unitOfMeasure
 
 **Kategória (Category) egyedet jellemzi:**
-- id, name
 
-Komment és Kedvencek táblák nem részei a megvalósított adatmodellnek.
+- id
+- name
 
-### 9.1 Logikai adatmodell
+> *Megjegyzés:* Komment és Kedvencek táblák **nem** részei a megvalósított adatmodellnek.
+
+## 9. Adatbázisterv
+
+### 9.1 Egyedek (entitások)
+
+**Felhasználó (RecipeUser) egyedet jellemzi:**
+- `id` (PK)
+- `name`
+- `userName`
+- `passwordEncoded`
+- `email`
+- `profileImageRef`
+
+**Kategória (Category) egyedet jellemzi:**
+- `id` (PK)
+- `name`
+
+**Alapanyag (Material) egyedet jellemzi:**
+- `id` (PK)
+- `name`
+- `calories`
+- `protein`
+- `carbohydrate`
+- `fat`
+- `unitOfMeasure`
+
+**Recept (Recipe) egyedet jellemzi:**
+- `id` (PK)
+- `user_id` (FK)
+- `category_id` (FK)
+- `name`
+- `imageRef`
+- `prepTime`
+- `cookTime`
+- `portion`
+- `description`
+- `instructions`
+
+**Hozzávaló (Ingredient) egyedet jellemzi:**
+- `id` (PK)
+- `recipe_id` (FK)
+- `material_id` (FK)
+- `amount`
+
+### 9.2 Logikai adatmodell (ER diagram)
 
 ```mermaid
 erDiagram
@@ -450,21 +661,9 @@ erDiagram
     }
 ```
 
-**Az adatbázis relációs sémái:**
-- RecipeUser [ #id, name, userName, passwordEncoded, email, profileImageRef ]
-- Category [ #id, name ]
-- Material [ #id, name, calories, protein, carbohydrate, fat, unitOfMeasure ]
-- Recipe [ #id, user_id, category_id, name, imageRef, prepTime, cookTime, portion, description, instructions ]
-- Ingredient [ #id, recipe_id, material_id, amount ]
-
-### 9.2 Tárolt eljárások
-
-A rendszer nem használ tárolt eljárásokat.
-
 ### 9.3 Fizikai adatmodellt legeneráló SQL szkript
 
 A táblákat létrehozó parancsok (MySQL szintaxis):
-
 ```sql
 CREATE TABLE recipe_user (
     id BIGINT AUTO_INCREMENT PRIMARY KEY,
@@ -515,64 +714,65 @@ CREATE TABLE ingredient (
 );
 ```
 
+---
+
 ## 10. Implementációs terv
 
-A Spring Boot backend tartalmazza az üzleti logikát és a REST API végpontokat. A frontend külön Blazor WebAssembly alkalmazás, amely a backendhez kapcsolódik.
+**Webszerver (Spring Boot):**
+- **Service réteg – üzleti logika:** `RecipeService`, `CategoryService`, `MaterialService`, `MyUserDetailService`
+- **Repository réteg – Spring Data JPA:** `RecipeRepository`, `CategoryRepository`, `MaterialRepository`, `UserDetailsRepository`
+- **Perzisztencia réteg – JPA entitások:** `RecipeUser`, `Recipe`, `Category`, `Material`, `Ingredient`
 
-### 10.1 Perzisztencia osztályok
+**Kliens oldal (Blazor WebAssembly):**
+- **Oldalak:** `Home`, `Recipe`, `Profil`, `Account`
+- **Komponensek:** `NavMenu`, `AccountNavMenu`, `CategoryFilter`, `AddRecipeDialog`, `EditRecipeDialog`
+- **Állapotkezelés:** Keresési és szűrési állapotok kezelése
+- **Kommunikáció:** HTTP kliens a backend REST API hívásához
 
-JPA annotációzott entitások (RecipeUser, Recipe, Category, Material, Ingredient). Az adatbázis-műveleteket Spring Data JPA Repository interfészek végzik.
-
-### 10.2 Üzleti logika osztályai
-
-Spring Service osztályok:
-- RecipeService
-- CategoryService
-- MaterialService
-- MyUserDetailService
-
-### 10.3 Kliens oldal osztályai
-
-Blazor komponensek, amelyek REST API-n keresztül kommunikálnak.
+---
 
 ## 11. Tesztterv
 
-A tesztelés célja a megvalósított funkciók helyes működésének ellenőrzése.
+### 11.1 Tesztelési felelősök
+- **Backend BDD tesztek (Cucumber):** Pataricza György
+- **Backend unit és controller tesztek (JUnit, MockMvc):** Németh Dávid
+- **Frontend DDT tesztek:** Benkő Bence, Csajbók-Reményi Korinna
+- **Manuális rendszer- és integrációs tesztek:** Deák Dániel
+- **Explorációs manuális tesztelés:** Teljes csapat
 
-A tesztelők között: **Németh Dávid**.
+### 11.2 Tesztelt üzleti folyamatok (regisztrált felhasználó)
+- **Regisztráció:**
+    - Sikeres regisztráció egyedi adatokkal.
+    - Sikertelen regisztráció foglalt felhasználónévvel.
+- **Recept feltöltése:**
+    - Érvényes adatokkal sikeres mentés.
+    - Hibás adatok esetén megfelelő hibaüzenet.
+- **Recept törlése:**
+    - Recept törlése azonosító alapján.
+    - Jogosultság ellenőrzése (csak saját recept törölhető).
 
-### 11.1 Tesztelt üzleti folyamatok (regisztrált felhasználó)
+### 11.3 Tesztelt üzleti folyamatok (minden felhasználó)
+- **Receptek böngészése:**
+    - Lista lekérése (`GET /recipe`).
+    - Kategória szerinti szűrés (`GET /recipe/bycategory`).
+    - Recept lekérdezése ID alapján (`GET /recipe/{id}`).
+- **Törzsadatok:**
+    - Kategóriák listázása (`GET /category`).
+    - Alapanyagok listázása (`GET /material`).
 
-**Regisztráció:**
-- Sikeres regisztráció egyedi adatokkal.
-- Sikertelen regisztráció foglalt felhasználónévvel.
-
-**Recept feltöltése:**
-- Érvényes adatokkal sikeres mentés.
-
-**Recept törlése:**
-- Azonosító szerinti törlés.
-
-### 11.2 Tesztelt üzleti folyamatok (minden felhasználó)
-
-**Receptek böngészése:**
-- Receptek listázása.
-- Receptek szűrése kategóriára.
-- Rezept lekérdezés id alapján.
-
-**Törzsadatok:**
-- Kategóriák listázása.
-- Alapanyagok listázása.
+---
 
 ## 12. Telepítési terv
 
-### Szerver oldali telepítés:
+### 12.1 Szerver oldali telepítés
+1. JDK 21 telepítése.
+2. MySQL adatbázis létrehozása és az SQL szkript futtatása.
+3. Spring Boot alkalmazás konfigurálása (adatbázis elérés).
+4. Alkalmazás indítása:
+   ```bash
+   java -jar app.jar
+   ```
 
-- Szükséges Java futtatókörnyezet (JDK 21).
-- A Spring Boot alkalmazás futtatható `.jar`-ként indul.
-- MySQL adatbázis szükséges, csatlakozás a konfigurációban.
-- Indítás: `java -jar app.jar`.
-
-### Kliens oldali telepítés:
-
-A Blazor WebAssembly alkalmazás modern böngészőben fut, külön telepítést nem igényel.
+### 12.2 Kliens oldali telepítés
+- A Blazor WebAssembly alkalmazás modern böngészőben fut, külön telepítést nem igényel.
+- A frontend statikus fájlként vagy ASP.NET Core hostolt módon is kiszolgálható.
