Deleted a wrong implication from testdoc.

--- a/docs/3. Searchbar TESZTJEGYZŐKÖNYV.md
+++ b/docs/3. Searchbar TESZTJEGYZŐKÖNYV.md
@@ -1,8 +1,10 @@
 # Receptmegosztó közösségi platform kereső funkciójának tesztelése
    
 Tesztet végezte: Csajbók-Reményi Korinna Alexandra  
+
 Dátum: 2025.12.10. 
-Talált hibák száma: 1 (A tesztelés során, az adatbázis tartalmával összefüggő, nem funkcionális hiba.)
+
+Talált hibák száma: 1
 
 ## 1. Tesztkörnyezet és Erőforrások
 
